# poetry-no-git-branch-locking

with-extras/: pyproject.toml
without-extras/: pyproject.toml
