[tool.poetry]
name = "poetry-no-git-branch-locking"
version = "0.1.0"
description = ""
authors = ["Bryan Forbes <bryan@reigndropsfall.net>"]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = { git = "https://github.com/Rapptz/discord.py", branch = "master" }

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
